Project ReConnectMindHealth_CBT {
  database_type: "MySQL"
  Note: "ERD theo module Goal Setting - Fear Ladder - Behavioral Experiment - Kho module CBT"
}

Enum patient_goal_type {
  GENERAL
  SOCIAL
  EXPOSURE
}

Enum patient_goal_status {
  ACTIVE
  COMPLETED
  ARCHIVED
}

Enum fear_ladder_bucket {
  EASY
  MEDIUM
  HARD
}

Enum fear_ladder_status {
  LOCKED
  ACTIVE
  MASTERED
}

Enum experiment_source_type {
  SYSTEM
  THERAPIST
}

Enum experiment_status {
  PLANNED
  IN_PROGRESS
  DONE
}

Table patient_profiles {
  user_id uuid [pk]
  nickname varchar(255)
  current_program_week int
  therapy_program_started_at datetime
  current_lsas_score int
}

Table patient_goals {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  goal_type patient_goal_type [not null]
  description text [not null]
  status patient_goal_status [not null]
  created_at datetime
}

Table lsas_situations {
  id uuid [pk]
  code varchar(50)
  title varchar(255)
  description text
}

Table quest_templates {
  id uuid [pk]
  title varchar(255) [not null]
  description text [not null]
  category varchar(50) [not null]
  difficulty varchar(50) [not null]
  module_code varchar(100)
  program_week int
  program_phase_code varchar(100)
  intervention_type varchar(100)
  prerequisite_codes_json json
  therapist_only_assignable bool [not null, default: false]
  hard_locked bool [not null, default: false]
}

Table fear_ladder_items {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  situation_id uuid [not null, ref: > lsas_situations.id]
  baseline_fear_score int [not null]
  baseline_avoidance_score int [not null]
  baseline_total_score int [not null]
  current_fear_score int [not null]
  current_avoidance_score int [not null]
  current_total_score int [not null]
  bucket fear_ladder_bucket [not null]
  ladder_order int [not null]
  status fear_ladder_status [not null]
}

Table behavioral_experiments {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  fear_ladder_item_id uuid [not null, ref: > fear_ladder_items.id]
  source_type experiment_source_type [not null]
  status experiment_status [not null]
  prediction text
  prediction_belief_before int
  prediction_belief_after int
  safety_behaviors_json json
  outcome text
  learning text
  execution_notes text
  proof_image_url varchar(500)
  post_fear_score int
  post_avoidance_score int
  assigned_at datetime [not null]
  setup_completed_at datetime
  started_at datetime
  completed_at datetime
}
